--- a/supermoney/pom.xml
+++ b/supermoney/pom.xml
@@ -5,6 +5,13 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>Andrea Mancini</name>
   <description>RESTful API for money transfers</description>
+  
+  <!-- Output to jar format -->
+	<packaging>jar</packaging>
+	
+	<properties>
+		<jdk.version>11.0.1</jdk.version>
+	</properties>	
 
   <dependencies>
     <dependency>
@@ -55,8 +62,40 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      
+      <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Main-Class>io.vertx.core.Launcher</Main-Class>
+                                        <Main-Verticle>com.andreamancini.supermoney.api
+                                        </Main-Verticle>
+                                    </manifestEntries>
+                                </transformer>
+                            </transformers>
+                            <artifactSet/>
+                            <outputFile>${project.build.directory}/${project.artifactId}-${project.version}-fat.jar
+                            </outputFile>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+      
     </plugins>
   </build>
+  
+  
 
 
 
