--- a/supermoney/pom.xml
+++ b/supermoney/pom.xml
@@ -54,6 +54,7 @@
 
   <build>
     <plugins>
+    
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
@@ -62,7 +63,7 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-      
+    
       <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -79,7 +80,7 @@
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Main-Class>io.vertx.core.Launcher</Main-Class>
-                                        <Main-Verticle>com.andreamancini.supermoney.api
+                                        <Main-Verticle>com.andreamancini.supermoney.api.Main
                                         </Main-Verticle>
                                     </manifestEntries>
                                 </transformer>
