--- a/supermoney/pom.xml
+++ b/supermoney/pom.xml
@@ -10,11 +10,11 @@
 	<packaging>jar</packaging>
 	
 	<properties>
-    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
- 	</properties>
+		<jdk.version>11.0.1</jdk.version>
+	</properties>	
 
   <dependencies>
-        <dependency>
+    <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
             <version>3.4.2</version>
@@ -48,87 +48,23 @@
             <version>2.0.0</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+  </dependencies>
+  
+  
 
-    <build>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-                <filtering>true</filtering>
-            </testResource>
-        </testResources>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
-                        <id>start-vertx-app</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <target>
-                                
-                               
-                                
-                                
-                                <exec executable="${java.home}/bin/java"
-                                      dir="${project.build.directory}"
-                                      spawn="true">
-                                    <arg value="-jar"/>
-                                    <arg value="${project.artifactId}-${project.version}-fat.jar"/>
-                                </exec>
-                            	
-                            
-                            
-                            </target>
-                        </configuration>
-                    </execution>
-                    
-                    <!-- kill the jar process after execution -->
-                    <execution>
-                        <id>stop-vertx-app</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                        <configuration>
-                            <target>
-                                <exec executable="bash"
-                                      dir="${project.build.directory}"
-                                      spawn="false">
-                                    <arg value="-c"/>
-                                    <arg value="ps ax | grep -i 'supermoney' | awk 'NR==1{print $1}' | xargs kill -SIGTERM"/>
-                                </exec>
-                            </target>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.18.1</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
+  <build>
+    <plugins>
+    
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    
+      <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>2.3</version>
@@ -156,49 +92,9 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
-    </build>
-
-    <profiles>
-        <profile>
-            <id>windows</id>
-            <activation>
-                <os>
-                    <family>windows</family>
-                </os>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-antrun-plugin</artifactId>
-                        <version>1.8</version>
-                        <executions>
-                            <execution>
-                                <id>stop-vertx-app</id>
-                                <phase>post-integration-test</phase>
-                                <goals>
-                                    <goal>run</goal>
-                                </goals>
-                                <configuration>
-                                    <target>
-                                        <exec executable="wmic"
-                                              dir="${project.build.directory}"
-                                              spawn="false">
-                                            <arg value="process"/>
-                                            <arg value="where"/>
-                                            <arg value="CommandLine like '%supermoney%' and not name='wmic.exe'"/>
-                                            <arg value="delete"/>
-                                        </exec>
-                                    </target>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
+      
+    </plugins>
+  </build>
   
   
 
